--- a/AudioPlayer/Builds/VisualStudio2022/resources.rc
+++ b/AudioPlayer/Builds/VisualStudio2022/resources.rc
@@ -15,9 +15,9 @@ BEGIN
   BEGIN
     BLOCK "040904E4"
     BEGIN
-      VALUE "FileDescription",  "AudioPlayer\0"
+      VALUE "FileDescription",  "AB Reference\0"
       VALUE "FileVersion",  "1.0.0\0"
-      VALUE "ProductName",  "AudioPlayer\0"
+      VALUE "ProductName",  "AB Reference\0"
       VALUE "ProductVersion",  "1.0.0\0"
     END
   END
