Changed the design of the GUI, and moved the code from the Waveform visualizer to its own class

--- a/AudioPlayer/Builds/VisualStudio2022/AB Reference_SharedCode.vcxproj
+++ b/AudioPlayer/Builds/VisualStudio2022/AB Reference_SharedCode.vcxproj
@@ -144,6 +144,8 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source\WaveformVisualizerComponent.cpp"/>
+    <ClCompile Include="..\..\Source\SectionComponent.cpp"/>
     <ClCompile Include="..\..\Source\PluginProcessor.cpp"/>
     <ClCompile Include="..\..\Source\PluginEditor.cpp"/>
     <ClCompile Include="..\..\..\..\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.cpp">
@@ -2447,6 +2449,8 @@
     <ClCompile Include="..\..\JuceLibraryCode\include_juce_gui_extra.cpp"/>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\WaveformVisualizerComponent.h"/>
+    <ClInclude Include="..\..\Source\SectionComponent.h"/>
     <ClInclude Include="..\..\Source\PluginProcessor.h"/>
     <ClInclude Include="..\..\Source\PluginEditor.h"/>
     <ClInclude Include="..\..\..\..\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h"/>
