--- a/AudioPlayer/Builds/VisualStudio2022/AB Reference_SharedCode.vcxproj
+++ b/AudioPlayer/Builds/VisualStudio2022/AB Reference_SharedCode.vcxproj
@@ -2836,6 +2836,7 @@
     <ClCompile Include="..\..\JuceLibraryCode\include_juce_gui_extra.cpp"/>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\ApplicationColours.h"/>
     <ClInclude Include="..\..\Source\WaveformVisualizerComponent.h"/>
     <ClInclude Include="..\..\Source\SectionComponent.h"/>
     <ClInclude Include="..\..\Source\PluginProcessor.h"/>
