Code Refactoring (Transport Tool Class)
I moved buttons like play, open, reference etc... to its own Component class called TransportTool. Just for seperating some of the GUI classes from eachother

--- a/AudioPlayer/Builds/VisualStudio2022/AB Reference_SharedCode.vcxproj
+++ b/AudioPlayer/Builds/VisualStudio2022/AB Reference_SharedCode.vcxproj
@@ -144,6 +144,7 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source\TransportToolComponent.cpp"/>
     <ClCompile Include="..\..\Source\WaveformVisualizerComponent.cpp"/>
     <ClCompile Include="..\..\Source\SectionComponent.cpp"/>
     <ClCompile Include="..\..\Source\PluginProcessor.cpp"/>
@@ -2836,6 +2837,7 @@
     <ClCompile Include="..\..\JuceLibraryCode\include_juce_gui_extra.cpp"/>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\TransportToolComponent.h"/>
     <ClInclude Include="..\..\Source\ApplicationColours.h"/>
     <ClInclude Include="..\..\Source\WaveformVisualizerComponent.h"/>
     <ClInclude Include="..\..\Source\SectionComponent.h"/>
