Changed Solution name & File Drag and drop
I implemented basics of drag and drop feature, and changed the solution and software name to JustReference. I still need to implement so that the buttons react when a file is dragged and dropped.

--- a/AudioPlayer/Builds/VisualStudio2022/resources.rc
+++ b/AudioPlayer/Builds/VisualStudio2022/resources.rc
@@ -15,9 +15,9 @@ BEGIN
   BEGIN
     BLOCK "040904E4"
     BEGIN
-      VALUE "FileDescription",  "AB Reference\0"
+      VALUE "FileDescription",  "JustReference\0"
       VALUE "FileVersion",  "1.0.0\0"
-      VALUE "ProductName",  "AB Reference\0"
+      VALUE "ProductName",  "JustReference\0"
       VALUE "ProductVersion",  "1.0.0\0"
     END
   END
