--- a/AudioPlayer/Builds/VisualStudio2022/JustReference_SharedCode.vcxproj
+++ b/AudioPlayer/Builds/VisualStudio2022/JustReference_SharedCode.vcxproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\Source\PlayheadComponent.cpp"/>
     <ClCompile Include="..\..\Source\WaveformVisualizerComponent.cpp"/>
+    <ClCompile Include="..\..\Source\FilterToolComponent.cpp"/>
     <ClCompile Include="..\..\Source\BrandingHeader.cpp"/>
     <ClCompile Include="..\..\Source\TransportToolComponent.cpp"/>
     <ClCompile Include="..\..\Source\SectionComponent.cpp"/>
@@ -2841,6 +2842,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\Source\PlayheadComponent.h"/>
     <ClInclude Include="..\..\Source\WaveformVisualizerComponent.h"/>
+    <ClInclude Include="..\..\Source\FilterToolComponent.h"/>
     <ClInclude Include="..\..\Source\BrandingHeader.h"/>
     <ClInclude Include="..\..\Source\TransportToolComponent.h"/>
     <ClInclude Include="..\..\Source\ApplicationColours.h"/>
