--- a/AudioPlayer/Builds/VisualStudio2022/JustReference_SharedCode.vcxproj.filters
+++ b/AudioPlayer/Builds/VisualStudio2022/JustReference_SharedCode.vcxproj.filters
@@ -2,8 +2,11 @@
 
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="JustReference\WaveformVisualizer">
-      <UniqueIdentifier>{D21D8DD7-D237-0733-0DA2-86402D54607B}</UniqueIdentifier>
+    <Filter Include="JustReference\GUI\WaveformVisualizer">
+      <UniqueIdentifier>{D7EED565-E645-6523-06C5-A34F6DEB3E05}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="JustReference\GUI">
+      <UniqueIdentifier>{1652A4FC-EAC4-2465-4123-4C43EE17DC9D}</UniqueIdentifier>
     </Filter>
     <Filter Include="JustReference\Source">
       <UniqueIdentifier>{2CB598E4-5CF2-9537-2A36-8BF5897B48C8}</UniqueIdentifier>
@@ -674,19 +677,22 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Source\PlayheadComponent.cpp">
-      <Filter>JustReference\WaveformVisualizer</Filter>
+      <Filter>JustReference\GUI\WaveformVisualizer</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\WaveformVisualizerComponent.cpp">
-      <Filter>JustReference\WaveformVisualizer</Filter>
+      <Filter>JustReference\GUI\WaveformVisualizer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\FilterToolComponent.cpp">
+      <Filter>JustReference\GUI</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\BrandingHeader.cpp">
-      <Filter>JustReference\Source</Filter>
+      <Filter>JustReference\GUI</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\TransportToolComponent.cpp">
-      <Filter>JustReference\Source</Filter>
+      <Filter>JustReference\GUI</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\SectionComponent.cpp">
-      <Filter>JustReference\Source</Filter>
+      <Filter>JustReference\GUI</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\PluginProcessor.cpp">
       <Filter>JustReference\Source</Filter>
@@ -3553,22 +3559,25 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Source\PlayheadComponent.h">
-      <Filter>JustReference\WaveformVisualizer</Filter>
+      <Filter>JustReference\GUI\WaveformVisualizer</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\WaveformVisualizerComponent.h">
-      <Filter>JustReference\WaveformVisualizer</Filter>
+      <Filter>JustReference\GUI\WaveformVisualizer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\FilterToolComponent.h">
+      <Filter>JustReference\GUI</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\BrandingHeader.h">
-      <Filter>JustReference\Source</Filter>
+      <Filter>JustReference\GUI</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\TransportToolComponent.h">
-      <Filter>JustReference\Source</Filter>
+      <Filter>JustReference\GUI</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\ApplicationColours.h">
-      <Filter>JustReference\Source</Filter>
+      <Filter>JustReference\GUI</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\SectionComponent.h">
-      <Filter>JustReference\Source</Filter>
+      <Filter>JustReference\GUI</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\PluginProcessor.h">
       <Filter>JustReference\Source</Filter>
