--- a/AudioPlayer/Builds/VisualStudio2022/resources.rc
+++ b/AudioPlayer/Builds/VisualStudio2022/resources.rc
@@ -15,6 +15,7 @@ BEGIN
   BEGIN
     BLOCK "040904E4"
     BEGIN
+      VALUE "CompanyName",  "JustMixing\0"
       VALUE "FileDescription",  "JustReference\0"
       VALUE "FileVersion",  "1.0.0\0"
       VALUE "ProductName",  "JustReference\0"
