--- a/JustReference/Builds/VisualStudio2022/JustReference_SharedCode.vcxproj.filters
+++ b/JustReference/Builds/VisualStudio2022/JustReference_SharedCode.vcxproj.filters
@@ -2,6 +2,9 @@
 
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="JustReference\LoopingProcessing">
+      <UniqueIdentifier>{1C447353-D752-AAF6-4094-ED0231E0960D}</UniqueIdentifier>
+    </Filter>
     <Filter Include="JustReference\SoloFilterProcessing">
       <UniqueIdentifier>{CFD0752E-5C28-95EB-FEF6-D1CD91480B10}</UniqueIdentifier>
     </Filter>
@@ -703,14 +706,17 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source\LoopingZoneComponent.cpp">
+      <Filter>JustReference\LoopingProcessing</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Source\LoopingZoneProcessor.cpp">
+      <Filter>JustReference\LoopingProcessing</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\FilterToolComponent.cpp">
       <Filter>JustReference\SoloFilterProcessing</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\SoloFilterProcessing.cpp">
       <Filter>JustReference\SoloFilterProcessing</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\Source\LoopingZoneComponent.cpp">
-      <Filter>JustReference\GUI\WaveformVisualizer</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Source\PlayheadComponent.cpp">
       <Filter>JustReference\GUI\WaveformVisualizer</Filter>
@@ -3702,14 +3708,17 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\LoopingZoneComponent.h">
+      <Filter>JustReference\LoopingProcessing</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\LoopingZoneProcessor.h">
+      <Filter>JustReference\LoopingProcessing</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\Source\FilterToolComponent.h">
       <Filter>JustReference\SoloFilterProcessing</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\SoloFilterProcessing.h">
       <Filter>JustReference\SoloFilterProcessing</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Source\LoopingZoneComponent.h">
-      <Filter>JustReference\GUI\WaveformVisualizer</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\PlayheadComponent.h">
       <Filter>JustReference\GUI\WaveformVisualizer</Filter>
