Slot Processor Class
I created the .cpp and .h files for the SlotProcessor class

--- a/JustReference/Builds/VisualStudio2022/JustReference_SharedCode.vcxproj
+++ b/JustReference/Builds/VisualStudio2022/JustReference_SharedCode.vcxproj
@@ -145,6 +145,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Source\SlotsComponent.cpp"/>
+    <ClCompile Include="..\..\Source\SlotsProcessor.cpp"/>
     <ClCompile Include="..\..\Source\LoopingZoneComponent.cpp"/>
     <ClCompile Include="..\..\Source\LoopingZoneProcessor.cpp"/>
     <ClCompile Include="..\..\Source\FilterToolComponent.cpp"/>
@@ -2951,6 +2952,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Source\SlotsComponent.h"/>
+    <ClInclude Include="..\..\Source\SlotsProcessor.h"/>
     <ClInclude Include="..\..\Source\LoopingZoneComponent.h"/>
     <ClInclude Include="..\..\Source\LoopingZoneProcessor.h"/>
     <ClInclude Include="..\..\Source\FilterToolComponent.h"/>
