New class to handle waveform and file loading
Created a new class to handle the waveform and file loading, for indivual slots.

--- a/JustReference/Builds/VisualStudio2022/JustReference_SharedCode.vcxproj
+++ b/JustReference/Builds/VisualStudio2022/JustReference_SharedCode.vcxproj
@@ -144,6 +144,7 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source\SlotMainContentComponent.cpp"/>
     <ClCompile Include="..\..\Source\SlotsComponent.cpp"/>
     <ClCompile Include="..\..\Source\SlotsProcessor.cpp"/>
     <ClCompile Include="..\..\Source\LoopingZoneComponent.cpp"/>
@@ -2564,6 +2565,7 @@
     <ClCompile Include="..\..\JuceLibraryCode\include_juce_gui_extra.cpp"/>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\SlotMainContentComponent.h"/>
     <ClInclude Include="..\..\Source\SlotsComponent.h"/>
     <ClInclude Include="..\..\Source\SlotsProcessor.h"/>
     <ClInclude Include="..\..\Source\LoopingZoneComponent.h"/>
