--- a/JustReference/Builds/VisualStudio2022/JustReference_SharedCode.vcxproj.filters
+++ b/JustReference/Builds/VisualStudio2022/JustReference_SharedCode.vcxproj.filters
@@ -640,6 +640,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Source\SlotMainContentComponent.cpp">
+      <Filter>JustReference\SlotFeature</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\SlotsComponent.cpp">
       <Filter>JustReference\SlotFeature</Filter>
     </ClCompile>
@@ -3255,6 +3258,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Source\SlotMainContentComponent.h">
+      <Filter>JustReference\SlotFeature</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\Source\SlotsComponent.h">
       <Filter>JustReference\SlotFeature</Filter>
     </ClInclude>
